--- a/style.css
+++ b/style.css
@@ -44,7 +44,12 @@
     top: 0;
 }
 body{
-    background-color: grey
+    background-color: wheat;
+    font-weight: 20;
+    font-size: 1.5rem;
+
+    
+
 }
 
 figcaption{
@@ -56,17 +61,20 @@ figcaption{
 .project-tile{
     font-weight: bold;
 }
-#nav-bar{
+#nav-bar a {
     float: left;
     color: #f2f2f2;
     text-align: center;
-    padding: 20px 20px;
+    padding: 10px 10px 10px 10px;
     text-decoration: none;
     font-size: 30px
 }
 #nav-bar a:hover{
     background-color: #ddd;
     color: black;
+    float: left;
+
+
 }
 #nav-bar-centered a{
     float: none;
@@ -75,6 +83,30 @@ figcaption{
     left: 50%;
     transform: translate(-50%, -50%);
 }
-#paragraph{
-colo
-}
+
+@media screen and(max-width:1400px){
+    #welcome-section{
+     font-size: 20px;  
+        
+    
+    }
+  
+    
+
+    
+    }
+    #nav-bar{
+        background-color: #333;
+        overflow: hidden;
+    }
+    #nav-bar a.active{
+        background-color: aqua;
+        color: whitesmoke;
+    }
+    #projects-section{
+        display: flex;
+        padding: 20px;
+   
+
+     
+
