--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@
     overflow: hidden;
     position: fixed;
     top: 0;
+    float: right;
 }
 body{
     background-color:wheat;
@@ -52,6 +53,7 @@ body{
 figcaption{
     font-size: 20px;
     font-weight: bold;
+    color:rebeccapurple;
 
 
 }
@@ -59,12 +61,14 @@ figcaption{
     font-weight: bold;
 }
 #nav-bar a {
-    float: left;
+    float: right;
     color: #f2f2f2;
     text-align: center;
     padding: 5px 5px;
     text-decoration: none;
-    font-size: 30px
+    font-size: 20px;
+    text-transform: uppercase;
+    margin-top: 10px;
 }
 #nav-bar a:hover{
     background-color: #ddd;
