--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-/* .container{
-    height:120px;
-    width:120px;
-    
-} */
-
 
 *{
     margin: 0;
@@ -11,16 +5,19 @@
     box-sizing: border-box ;
 }
 #welcome-section{
-    display:flex;
-    /* place-content: center; */
-    justify-content: space-around;
-    margin-top: 100px;
+   display:flex;
+    padding:50px;
+    padding-top:100px;
+    justify-content: space-between;
+    align-items:center;
+    height: 100vh; 
     
 
 }
 #welcome-section img{
     display: flex-start;
     align-items: left;
+    margin-right: 100px;
 
 
 }
@@ -31,21 +28,20 @@
 }
 #nav-bar{
     display: flex;
-    border: 2px solid red;
     width:100%;
     margin-bottom: 50px;
     padding: 20px;
     justify-content:center;
-    background-color:rosybrown;
     overflow: hidden;
     position: fixed;
     top: 0;
     float: right;
 }
 body{
-    background-color:#35424a;
+    background-color: #361500;
     font-weight: 10;
     font-size: 1.5rem;
+    color:#CC9544
     
 
 }
@@ -84,6 +80,12 @@ figcaption{
     left: 50%;
     transform: translate(-50%, -50%);
 }
+span{
+    color: white;
+}
+.container h1:nth-child(2){
+    margin-bottom:30px;
+  }
 
 @media screen and(max-width:1400px){
     #welcome-section{
@@ -105,10 +107,11 @@ figcaption{
     #projects-section{
         display: flex;
         padding: 15px;
-        background-color:#333;
+        background-color:1C0A00;
         color:#e6ede6;
         margin-top: 10px;
         margin-bottom: 10px;
+        
         
         
         
@@ -131,6 +134,7 @@ figcaption{
         margin: 5px 2px;
         color: blue;
         margin top: 20px;
+        
 
     }
    
