--- a/style.css
+++ b/style.css
@@ -135,19 +135,21 @@ span{
         text-align: center;
         text-decoration: none;
         margin: 5px 2px;
-        margin top: 20px;
+        margin-top: 20px;
         
 
     }
    
     .container{
         min-height: 300px;
-        margin top: 100px;
-        margin bottom: 10px;
+        margin-top: 100px;
+        margin-bottom: 10px;
         
         
     }
-    
+    footer{
+        height:20vh ;
+    }
    
 
      
